# crypto-predictor

./: .gitignore  CODE_STRUCTURE.md  README.md  config.ini.example  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.py  test_data.py
lib/: __init__.py  data.py  model.py
libs/: exchange.py  process.py
models/: xgbmodel.sav
research/: test_live_trading.ipynb  training_model.ipynb
researchs/: backtest.ipynb  gathering_data.ipynb
src/predictor/: cli.py  data.py  model.py  predictor.py  process.py
test/: test.py
